--- a/Edule/index.html
+++ b/Edule/index.html
@@ -107,7 +107,7 @@
             <!-- Mobile Menu Start -->
             <div class="mobile-menu-items">
                 <ul class="nav-menu">
-                    <li><a href="index.html" onclick="changeIframeSrc('index.html')">主页</a></li>
+                    <li><a href="index.html" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
                     <li><a href="#" onclick="changeIframeSrc('https://chat-gpt-next-web-three-lime-50.vercel.app/')">AI问答</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
