Signed-off-by: ZIY_Yan <ziy_yan@intra.pegatroncorp.com> 123

--- a/Edule/index.html
+++ b/Edule/index.html
@@ -51,10 +51,10 @@
                         <!-- Header Menu Start -->
                         <div class="header-menu d-none d-lg-block">
                             <ul class="nav-menu">
-                                <li><a href="#" onclick="changeIframeSrc('downloads/index.html')">主页</a></li>
+                                <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
                                 <li><a href="#" onclick="changeIframeSrc('https://chat-gpt-next-web-three-lime-50.vercel.app/')">AI问答</a></li>
                                 <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
-                                <li><a href="#" onclick="changeIframeSrc('downloads/index.html')">搜藏与分享</a></li>
+                                <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
                             </ul>
 
                         </div>
@@ -107,7 +107,7 @@
             <!-- Mobile Menu Start -->
             <div class="mobile-menu-items">
                 <ul class="nav-menu">
-                    <li><a href="index.html" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
+                    <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
                     <li><a href="#" onclick="changeIframeSrc('https://chat-gpt-next-web-three-lime-50.vercel.app/')">AI问答</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
