--- a/Edule/index.html
+++ b/Edule/index.html
@@ -52,7 +52,7 @@
                         <div class="header-menu d-none d-lg-block">
                             <ul class="nav-menu">
                                 <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
-                                <li><a href="#" onclick="changeIframeSrc('https://chat-gpt-next-web-three-lime-50.vercel.app/')">AI问答</a></li>
+                                <li><a href="#" onclick="changeIframeSrc('https://chatgpt-iota-flax.vercel.app/')">AI问答</a></li>
                                 <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
                                 <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
                             </ul>
@@ -108,7 +108,7 @@
             <div class="mobile-menu-items">
                 <ul class="nav-menu">
                     <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
-                    <li><a href="#" onclick="changeIframeSrc('https://chat-gpt-next-web-three-lime-50.vercel.app/')">AI问答</a></li>
+                    <li><a href="#" onclick="changeIframeSrc('https://chatgpt-iota-flax.vercel.app/')">AI问答</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
                 </ul>
@@ -160,7 +160,7 @@
         function changeIframeSrc(url) {
             // Set the iframe's src to the new URL
             document.getElementById('if').src = url;
-            if(url=='https://chat-gpt-next-web-three-lime-50.vercel.app/')
+            if(url=='https://chatgpt-iota-flax.vercel.app/')
             {
                 document.body.style.backgroundColor = '#f7f7f7';
             }
