--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-  window.location.href='edule/index.html'
+  window.location.href='Edule/index.html'
 </script>
 </body>
 </html>
