--- a/Edule/yiwen/yiwen/yiwen.html
+++ b/Edule/yiwen/yiwen/yiwen.html
@@ -24,87 +24,87 @@
 </div>
 <div class="bd">
 <ul class="cate_list clearfix">
-<li><a href="yiwen/1.html">第1章</a></li>
-<li><a href="yiwen/2.html">第2章</a></li>
-<li><a href="yiwen/3.html">第3章</a></li>
-<li><a href="yiwen/4.html">第4章</a></li>
-<li><a href="yiwen/5.html">第5章</a></li>
-<li><a href="yiwen/6.html">第6章</a></li>
-<li><a href="yiwen/7.html">第7章</a></li>
-<li><a href="yiwen/8.html">第8章</a></li>
-<li><a href="yiwen/9.html">第9章</a></li>
-<li><a href="yiwen/10.html">第10章</a></li>
-<li><a href="yiwen/11.html">第11章</a></li>
-<li><a href="yiwen/12.html">第12章</a></li>
-<li><a href="yiwen/13.html">第13章</a></li>
-<li><a href="yiwen/14.html">第14章</a></li>
-<li><a href="yiwen/15.html">第15章</a></li>
-<li><a href="yiwen/16.html">第16章</a></li>
-<li><a href="yiwen/17.html">第17章</a></li>
-<li><a href="yiwen/18.html">第18章</a></li>
-<li><a href="yiwen/19.html">第19章</a></li>
-<li><a href="yiwen/20.html">第20章</a></li>
-<li><a href="yiwen/21.html">第21章</a></li>
-<li><a href="yiwen/22.html">第22章</a></li>
-<li><a href="yiwen/23.html">第23章</a></li>
-<li><a href="yiwen/24.html">第24章</a></li>
-<li><a href="yiwen/25.html">第25章</a></li>
-<li><a href="yiwen/26.html">第26章</a></li>
-<li><a href="yiwen/27.html">第27章</a></li>
-<li><a href="yiwen/28.html">第28章</a></li>
-<li><a href="yiwen/29.html">第29章</a></li>
-<li><a href="yiwen/30.html">第30章</a></li>
-<li><a href="yiwen/31.html">第31章</a></li>
-<li><a href="yiwen/32.html">第32章</a></li>
-<li><a href="yiwen/33.html">第33章</a></li>
-<li><a href="yiwen/34.html">第34章</a></li>
-<li><a href="yiwen/35.html">第35章</a></li>
-<li><a href="yiwen/36.html">第36章</a></li>
-<li><a href="yiwen/37.html">第37章</a></li>
-<li><a href="yiwen/38.html">第38章</a></li>
-<li><a href="yiwen/39.html">第39章</a></li>
-<li><a href="yiwen/40.html">第40章</a></li>
-<li><a href="yiwen/41.html">第41章</a></li>
-<li><a href="yiwen/42.html">第42章</a></li>
-<li><a href="yiwen/43.html">第43章</a></li>
-<li><a href="yiwen/44.html">第44章</a></li>
-<li><a href="yiwen/45.html">第45章</a></li>
-<li><a href="yiwen/46.html">第46章</a></li>
-<li><a href="yiwen/47.html">第47章</a></li>
-<li><a href="yiwen/48.html">第48章</a></li>
-<li><a href="yiwen/49.html">第49章</a></li>
-<li><a href="yiwen/50.html">第50章</a></li>
-<li><a href="yiwen/51.html">第51章</a></li>
-<li><a href="yiwen/52.html">第52章</a></li>
-<li><a href="yiwen/53.html">第53章</a></li>
-<li><a href="yiwen/54.html">第54章</a></li>
-<li><a href="yiwen/55.html">第55章</a></li>
-<li><a href="yiwen/56.html">第56章</a></li>
-<li><a href="yiwen/57.html">第57章</a></li>
-<li><a href="yiwen/58.html">第58章</a></li>
-<li><a href="yiwen/59.html">第59章</a></li>
-<li><a href="yiwen/60.html">第60章</a></li>
-<li><a href="yiwen/61.html">第61章</a></li>
-<li><a href="yiwen/62.html">第62章</a></li>
-<li><a href="yiwen/63.html">第63章</a></li>
-<li><a href="yiwen/64.html">第64章</a></li>
-<li><a href="yiwen/65.html">第65章</a></li>
-<li><a href="yiwen/66.html">第66章</a></li>
-<li><a href="yiwen/67.html">第67章</a></li>
-<li><a href="yiwen/68.html">第68章</a></li>
-<li><a href="yiwen/69.html">第69章</a></li>
-<li><a href="yiwen/70.html">第70章</a></li>
-<li><a href="yiwen/71.html">第71章</a></li>
-<li><a href="yiwen/72.html">第72章</a></li>
-<li><a href="yiwen/73.html">第73章</a></li>
-<li><a href="yiwen/74.html">第74章</a></li>
-<li><a href="yiwen/75.html">第75章</a></li>
-<li><a href="yiwen/76.html">第76章</a></li>
-<li><a href="yiwen/77.html">第77章</a></li>
-<li><a href="yiwen/78.html">第78章</a></li>
-<li><a href="yiwen/79.html">第79章</a></li>
-<li><a href="yiwen/80.html">第80章</a></li>
-<li><a href="yiwen/81.html">第81章</a></li>
+<li><a href="1.html">第1章</a></li>
+<li><a href="2.html">第2章</a></li>
+<li><a href="3.html">第3章</a></li>
+<li><a href="4.html">第4章</a></li>
+<li><a href="5.html">第5章</a></li>
+<li><a href="6.html">第6章</a></li>
+<li><a href="7.html">第7章</a></li>
+<li><a href="8.html">第8章</a></li>
+<li><a href="9.html">第9章</a></li>
+<li><a href="10.html">第10章</a></li>
+<li><a href="11.html">第11章</a></li>
+<li><a href="12.html">第12章</a></li>
+<li><a href="13.html">第13章</a></li>
+<li><a href="14.html">第14章</a></li>
+<li><a href="15.html">第15章</a></li>
+<li><a href="16.html">第16章</a></li>
+<li><a href="17.html">第17章</a></li>
+<li><a href="18.html">第18章</a></li>
+<li><a href="19.html">第19章</a></li>
+<li><a href="20.html">第20章</a></li>
+<li><a href="21.html">第21章</a></li>
+<li><a href="22.html">第22章</a></li>
+<li><a href="23.html">第23章</a></li>
+<li><a href="24.html">第24章</a></li>
+<li><a href="25.html">第25章</a></li>
+<li><a href="26.html">第26章</a></li>
+<li><a href="27.html">第27章</a></li>
+<li><a href="28.html">第28章</a></li>
+<li><a href="29.html">第29章</a></li>
+<li><a href="30.html">第30章</a></li>
+<li><a href="31.html">第31章</a></li>
+<li><a href="32.html">第32章</a></li>
+<li><a href="33.html">第33章</a></li>
+<li><a href="34.html">第34章</a></li>
+<li><a href="35.html">第35章</a></li>
+<li><a href="36.html">第36章</a></li>
+<li><a href="37.html">第37章</a></li>
+<li><a href="38.html">第38章</a></li>
+<li><a href="39.html">第39章</a></li>
+<li><a href="40.html">第40章</a></li>
+<li><a href="41.html">第41章</a></li>
+<li><a href="42.html">第42章</a></li>
+<li><a href="43.html">第43章</a></li>
+<li><a href="44.html">第44章</a></li>
+<li><a href="45.html">第45章</a></li>
+<li><a href="46.html">第46章</a></li>
+<li><a href="47.html">第47章</a></li>
+<li><a href="48.html">第48章</a></li>
+<li><a href="49.html">第49章</a></li>
+<li><a href="50.html">第50章</a></li>
+<li><a href="51.html">第51章</a></li>
+<li><a href="52.html">第52章</a></li>
+<li><a href="53.html">第53章</a></li>
+<li><a href="54.html">第54章</a></li>
+<li><a href="55.html">第55章</a></li>
+<li><a href="56.html">第56章</a></li>
+<li><a href="57.html">第57章</a></li>
+<li><a href="58.html">第58章</a></li>
+<li><a href="59.html">第59章</a></li>
+<li><a href="60.html">第60章</a></li>
+<li><a href="61.html">第61章</a></li>
+<li><a href="62.html">第62章</a></li>
+<li><a href="63.html">第63章</a></li>
+<li><a href="64.html">第64章</a></li>
+<li><a href="65.html">第65章</a></li>
+<li><a href="66.html">第66章</a></li>
+<li><a href="67.html">第67章</a></li>
+<li><a href="68.html">第68章</a></li>
+<li><a href="69.html">第69章</a></li>
+<li><a href="70.html">第70章</a></li>
+<li><a href="71.html">第71章</a></li>
+<li><a href="72.html">第72章</a></li>
+<li><a href="73.html">第73章</a></li>
+<li><a href="74.html">第74章</a></li>
+<li><a href="75.html">第75章</a></li>
+<li><a href="76.html">第76章</a></li>
+<li><a href="77.html">第77章</a></li>
+<li><a href="78.html">第78章</a></li>
+<li><a href="79.html">第79章</a></li>
+<li><a href="80.html">第80章</a></li>
+<li><a href="81.html">第81章</a></li>
 </ul>
 </div>
 </section> <section class="mod_cate">
