--- a/Edule/yiwen/yiwen.html
+++ b/Edule/yiwen/yiwen.html
@@ -24,87 +24,87 @@
 </div>
 <div class="bd">
 <ul class="cate_list clearfix">
-<li><a href="/Edule/Edule/yiwen/1.html">第1章</a></li>
-<li><a href="/Edule/Edule/yiwen/2.html">第2章</a></li>
-<li><a href="/Edule/Edule/yiwen/3.html">第3章</a></li>
-<li><a href="/Edule/Edule/yiwen/4.html">第4章</a></li>
-<li><a href="/Edule/Edule/yiwen/5.html">第5章</a></li>
-<li><a href="/Edule/Edule/yiwen/6.html">第6章</a></li>
-<li><a href="/Edule/Edule/yiwen/7.html">第7章</a></li>
-<li><a href="/Edule/Edule/yiwen/8.html">第8章</a></li>
-<li><a href="/Edule/Edule/yiwen/9.html">第9章</a></li>
-<li><a href="/Edule/Edule/yiwen/10.html">第10章</a></li>
-<li><a href="/Edule/Edule/yiwen/11.html">第11章</a></li>
-<li><a href="/Edule/Edule/yiwen/12.html">第12章</a></li>
-<li><a href="/Edule/Edule/yiwen/13.html">第13章</a></li>
-<li><a href="/Edule/Edule/yiwen/14.html">第14章</a></li>
-<li><a href="/Edule/Edule/yiwen/15.html">第15章</a></li>
-<li><a href="/Edule/Edule/yiwen/16.html">第16章</a></li>
-<li><a href="/Edule/Edule/yiwen/17.html">第17章</a></li>
-<li><a href="/Edule/Edule/yiwen/18.html">第18章</a></li>
-<li><a href="/Edule/Edule/yiwen/19.html">第19章</a></li>
-<li><a href="/Edule/Edule/yiwen/20.html">第20章</a></li>
-<li><a href="/Edule/Edule/yiwen/21.html">第21章</a></li>
-<li><a href="/Edule/Edule/yiwen/22.html">第22章</a></li>
-<li><a href="/Edule/Edule/yiwen/23.html">第23章</a></li>
-<li><a href="/Edule/Edule/yiwen/24.html">第24章</a></li>
-<li><a href="/Edule/Edule/yiwen/25.html">第25章</a></li>
-<li><a href="/Edule/Edule/yiwen/26.html">第26章</a></li>
-<li><a href="/Edule/Edule/yiwen/27.html">第27章</a></li>
-<li><a href="/Edule/Edule/yiwen/28.html">第28章</a></li>
-<li><a href="/Edule/Edule/yiwen/29.html">第29章</a></li>
-<li><a href="/Edule/Edule/yiwen/30.html">第30章</a></li>
-<li><a href="/Edule/Edule/yiwen/31.html">第31章</a></li>
-<li><a href="/Edule/Edule/yiwen/32.html">第32章</a></li>
-<li><a href="/Edule/Edule/yiwen/33.html">第33章</a></li>
-<li><a href="/Edule/Edule/yiwen/34.html">第34章</a></li>
-<li><a href="/Edule/Edule/yiwen/35.html">第35章</a></li>
-<li><a href="/Edule/Edule/yiwen/36.html">第36章</a></li>
-<li><a href="/Edule/Edule/yiwen/37.html">第37章</a></li>
-<li><a href="/Edule/Edule/yiwen/38.html">第38章</a></li>
-<li><a href="/Edule/Edule/yiwen/39.html">第39章</a></li>
-<li><a href="/Edule/Edule/yiwen/40.html">第40章</a></li>
-<li><a href="/Edule/Edule/yiwen/41.html">第41章</a></li>
-<li><a href="/Edule/Edule/yiwen/42.html">第42章</a></li>
-<li><a href="/Edule/Edule/yiwen/43.html">第43章</a></li>
-<li><a href="/Edule/Edule/yiwen/44.html">第44章</a></li>
-<li><a href="/Edule/Edule/yiwen/45.html">第45章</a></li>
-<li><a href="/Edule/Edule/yiwen/46.html">第46章</a></li>
-<li><a href="/Edule/Edule/yiwen/47.html">第47章</a></li>
-<li><a href="/Edule/Edule/yiwen/48.html">第48章</a></li>
-<li><a href="/Edule/Edule/yiwen/49.html">第49章</a></li>
-<li><a href="/Edule/Edule/yiwen/50.html">第50章</a></li>
-<li><a href="/Edule/Edule/yiwen/51.html">第51章</a></li>
-<li><a href="/Edule/Edule/yiwen/52.html">第52章</a></li>
-<li><a href="/Edule/Edule/yiwen/53.html">第53章</a></li>
-<li><a href="/Edule/Edule/yiwen/54.html">第54章</a></li>
-<li><a href="/Edule/Edule/yiwen/55.html">第55章</a></li>
-<li><a href="/Edule/Edule/yiwen/56.html">第56章</a></li>
-<li><a href="/Edule/Edule/yiwen/57.html">第57章</a></li>
-<li><a href="/Edule/Edule/yiwen/58.html">第58章</a></li>
-<li><a href="/Edule/Edule/yiwen/59.html">第59章</a></li>
-<li><a href="/Edule/Edule/yiwen/60.html">第60章</a></li>
-<li><a href="/Edule/Edule/yiwen/61.html">第61章</a></li>
-<li><a href="/Edule/Edule/yiwen/62.html">第62章</a></li>
-<li><a href="/Edule/Edule/yiwen/63.html">第63章</a></li>
-<li><a href="/Edule/Edule/yiwen/64.html">第64章</a></li>
-<li><a href="/Edule/Edule/yiwen/65.html">第65章</a></li>
-<li><a href="/Edule/Edule/yiwen/66.html">第66章</a></li>
-<li><a href="/Edule/Edule/yiwen/67.html">第67章</a></li>
-<li><a href="/Edule/Edule/yiwen/68.html">第68章</a></li>
-<li><a href="/Edule/Edule/yiwen/69.html">第69章</a></li>
-<li><a href="/Edule/Edule/yiwen/70.html">第70章</a></li>
-<li><a href="/Edule/Edule/yiwen/71.html">第71章</a></li>
-<li><a href="/Edule/Edule/yiwen/72.html">第72章</a></li>
-<li><a href="/Edule/Edule/yiwen/73.html">第73章</a></li>
-<li><a href="/Edule/Edule/yiwen/74.html">第74章</a></li>
-<li><a href="/Edule/Edule/yiwen/75.html">第75章</a></li>
-<li><a href="/Edule/Edule/yiwen/76.html">第76章</a></li>
-<li><a href="/Edule/Edule/yiwen/77.html">第77章</a></li>
-<li><a href="/Edule/Edule/yiwen/78.html">第78章</a></li>
-<li><a href="/Edule/Edule/yiwen/79.html">第79章</a></li>
-<li><a href="/Edule/Edule/yiwen/80.html">第80章</a></li>
-<li><a href="/Edule/Edule/yiwen/81.html">第81章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/1.html">第1章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/2.html">第2章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/3.html">第3章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/4.html">第4章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/5.html">第5章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/6.html">第6章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/7.html">第7章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/8.html">第8章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/9.html">第9章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/10.html">第10章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/11.html">第11章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/12.html">第12章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/13.html">第13章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/14.html">第14章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/15.html">第15章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/16.html">第16章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/17.html">第17章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/18.html">第18章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/19.html">第19章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/20.html">第20章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/21.html">第21章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/22.html">第22章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/23.html">第23章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/24.html">第24章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/25.html">第25章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/26.html">第26章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/27.html">第27章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/28.html">第28章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/29.html">第29章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/30.html">第30章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/31.html">第31章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/32.html">第32章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/33.html">第33章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/34.html">第34章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/35.html">第35章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/36.html">第36章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/37.html">第37章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/38.html">第38章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/39.html">第39章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/40.html">第40章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/41.html">第41章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/42.html">第42章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/43.html">第43章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/44.html">第44章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/45.html">第45章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/46.html">第46章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/47.html">第47章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/48.html">第48章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/49.html">第49章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/50.html">第50章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/51.html">第51章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/52.html">第52章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/53.html">第53章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/54.html">第54章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/55.html">第55章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/56.html">第56章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/57.html">第57章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/58.html">第58章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/59.html">第59章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/60.html">第60章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/61.html">第61章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/62.html">第62章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/63.html">第63章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/64.html">第64章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/65.html">第65章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/66.html">第66章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/67.html">第67章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/68.html">第68章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/69.html">第69章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/70.html">第70章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/71.html">第71章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/72.html">第72章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/73.html">第73章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/74.html">第74章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/75.html">第75章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/76.html">第76章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/77.html">第77章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/78.html">第78章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/79.html">第79章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/80.html">第80章</a></li>
+<li><a href="/Edule/Edule/yiwen/yiwen/81.html">第81章</a></li>
 </ul>
 </div>
 </section> <section class="mod_cate">
