--- a/Edule/index.html
+++ b/Edule/index.html
@@ -129,6 +129,7 @@
 
         </div>
         <!-- Mobile Menu End -->
+         <div class="overlay"></div>
     </div>
     <div style="height: 90vh;width: 100vw;position: absolute;top: 10%;">
         <!-- <iframe src="https://www.daodejing.org/" style="width: 100%;height: 100%;"></iframe> -->
@@ -176,6 +177,7 @@
             document.querySelector('.mobile-menu')?.classList.remove('open');
         });
     });
+    
     </script>
     <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
     <!-- <script src="assets/js/plugins.min.js"></script> -->
