--- a/Edule/index.html
+++ b/Edule/index.html
@@ -107,7 +107,7 @@
             <!-- Mobile Menu Start -->
             <div class="mobile-menu-items">
                 <ul class="nav-menu">
-                    <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/index.html')">主页</a></li>
+                    <li><a href="#" onclick="changeIframeSrc('yiwen/yiwen/对照表.html')">主页</a></li>
                     <li><a href="#" onclick="changeIframeSrc('https://chatgpt-iota-flax.vercel.app/')">AI问答</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">笔记摘要</a></li>
                     <li><a href="#" onclick="changeIframeSrc('messages.html')">搜藏与分享</a></li>
@@ -133,7 +133,7 @@
     </div>
     <div style="height: 90vh;width: 100vw;position: absolute;top: 10%;">
         <!-- <iframe src="https://www.daodejing.org/" style="width: 100%;height: 100%;"></iframe> -->
-        <iframe src="yiwen/yiwen/index.html" style="width: 100%;height: 100%;" id="if"></iframe>
+        <iframe src="对照表.html" style="width: 100%;height: 100%;" id="if"></iframe>
     </div>
 
 
