--- a/Edule/index.html
+++ b/Edule/index.html
@@ -64,6 +64,7 @@
                         <div class="header-sign-in-up d-none d-lg-block">
                             <ul>
                                 <li><a class="sign-in" href="login.html">登出</a></li>
+                                <li><a a href="#" onclick="changeIframeSrc('权限.html')">权限</a></li>
                                 <li><a class="sign-up" href="register.html">个人信息</a></li>
                             </ul>
                         </div>
