--- a/Edule/权限.html
+++ b/Edule/权限.html
@@ -1,159 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>权限管理</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
-<style>
-    *{
-        padding: 0;
-        margin: 0;
-    }
-    #myTable {
-        border-collapse: collapse;
-        /* 合并边框 */
-    }
+<body class="bg-gray-100">
 
-    #myTable th,
-    #myTable td {
-        padding: 8px;
-        /* 内边距 */
-        text-align: left;
-        /* 左对齐 */
-        white-space: nowrap;
-        border: 1px solid gray;
-    }
-    .modal-overlay {
-        display: none; /* 默认隐藏 */
-        position: fixed;
-        top: 0; left: 0; right: 0; bottom: 0;
-        background: rgba(0,0,0,0);
-        z-index: 999;
-        justify-content: center;
-        align-items: center;
-      }
+  <div class="container mx-auto p-6">
+    <div class="flex justify-between items-center mb-4">
+      <h1 class="text-2xl font-bold">权限管理</h1>
+      <!-- <button onclick="showAddModal()"
+        class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+        添加用户
+      </button> -->
+    </div>
 
-      /* 弹窗内容 */
-      .modal-content {
-        background: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        max-width: 300px;
-        display:flex;
-        flex-wrap:wrap;
-        justify-content:center;
-      }
-      .modal-contents {
-        background: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        max-width: 100vw;
-        max-height: 100vw;
-        display:flex;
-        flex-wrap:wrap;
-        justify-content:center;
-      }
-      .modal-content input {
-        display: block;
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 5px;
-      }
-      .modal-content select {
-        display: block;
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 5px;
-      }
+    <input id="searchInput" type="text" placeholder="搜索用户名..."
+      class="border border-gray-300 rounded px-4 py-2 mb-4 w-full max-w-md">
 
-      .modal-content button {
-        width: 70%;
-        padding: 6px;
-      }
-</style>
-<body style="width: 100vw;height: 100vh;overflow: auto;">
-    <table id="myTable" style="margin-left: 39%;">
-        <thead>
-            <tr>
-                <th>序号</th>
-                <th>账号</th>
-                <th>权限</th>
-                <th>操作1</th>
-                <th>操作2</th>
-            </tr>
+    <div class="bg-white shadow rounded-lg overflow-hidden">
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+          <tr>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">#</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">邮箱</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">权限</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">登录次数</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">操作</th>
+          </tr>
         </thead>
-        <tbody id="tbody">
+        <tbody id="tbody" class="bg-white divide-y divide-gray-200"></tbody>
+      </table>
+    </div>
+  </div>
 
-        </tbody>
-    </table>
-    <div class="modal-overlay" id="modalOverlay">
-        <div class="modal-content" id="modalContent">
-            <input type="text" id='姓名' readonly>  
-            <select id="权限">
-                <option value="">选择权限</option>
-                <option value="admin">超级管理员</option>
-                <option value="只读">只读</option>
-            </select>
-            <button onclick="submitForm()">Submit</button>
-        </div>
+  <!-- 修改 Modal -->
+  <div id="modalOverlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white p-6 rounded shadow-lg w-full max-w-sm">
+      <h2 class="text-xl mb-4">修改权限</h2>
+      <input id="姓名" type="text" readonly class="border w-full mb-2 px-3 py-2 rounded bg-gray-100">
+      <label class="block mb-2 font-medium">选择权限</label>
+        <select id="权限" class="border w-full mb-4 px-3 py-2 rounded">
+        <option value="">请选择权限</option>
+        <option value="超级管理员">超级管理员</option>
+        <option value="普通人">普通人</option>
+        </select>
+
+      <div class="flex justify-end">
+        <button onclick="submitForm()"
+          class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">保存</button>
+        <button onclick="hideModal()"
+          class="px-4 py-2 border rounded">取消</button>
+      </div>
     </div>
-    <div class="modal-overlay" id="modalOverlays">
-        <div class="modal-content" id="modalContent">
-            <input type="text" placeholder="姓名" id='姓名_del'>
-            <button onclick="submitForms()">Del</button>
-        </div>
+  </div>
+
+  <!-- 删除 Modal -->
+  <div id="modalOverlays" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white p-6 rounded shadow-lg w-full max-w-sm">
+      <h2 class="text-xl mb-4">确认删除</h2>
+      <input id="姓名_del" type="text" readonly class="border w-full mb-4 px-3 py-2 rounded bg-gray-100">
+      <div class="flex justify-end">
+        <button onclick="submitForms()"
+          class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 mr-2">删除</button>
+        <button onclick="hideDeleteModal()"
+          class="px-4 py-2 border rounded">取消</button>
+      </div>
     </div>
-    <script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
-    <script>
-        
-        document.getElementById('modalOverlay').addEventListener('click', function (e) {
-            if (e.target === this) {
-                this.style.display = 'none';
-            }
-        });
-        document.getElementById('modalOverlays').addEventListener('click', function (e) {
-            if (e.target === this) {
-                this.style.display = 'none';
-            }
-        });
-        function submitForm() {
-            $.get("https://srjfaw743ud0.xiaomiqiu.com/修改",{user:$("#姓名").val(),权限:$("#权限").val()}, function (data) {
-                初始()
-                document.getElementById('modalOverlay').style.display = 'none';
-            })
+  </div>
+
+  <script>
+    function 初始() {
+      $.get("https://srjfaw743ud0.xiaomiqiu.com/权限", function (data) {
+        var rows = ''
+        for (let index = 0; index < data.length; index++) {
+          const element = data[index];
+          rows += `<tr>
+            <td class="px-6 py-4">${index + 1}</td>
+            <td class="px-6 py-4">${element[0]}</td>
+            <td class="px-6 py-4">${element[1]}</td>
+            <td class="px-6 py-4">${element[2]}</td>
+            <td class="px-6 py-4">
+              <button onclick="xg('${element[0]}')" class="text-blue-600 hover:underline mr-4">修改</button>
+              <button onclick="del('${element[0]}')" class="text-red-600 hover:underline">删除</button>
+            </td>
+          </tr>`
         }
-        function submitForms() {
-            $.get("https://srjfaw743ud0.xiaomiqiu.com/删除",{user:$("#姓名_del").val()}, function (data) {
-                初始()
-                document.getElementById('modalOverlays').style.display = 'none';
-            })
+        $("#tbody").html(rows)
+      }, 'json')
+    }
+
+    初始();
+
+    function xg(user) {
+      $("#姓名").val(user)
+      $("#权限").val('')
+      document.getElementById('modalOverlay').style.display = 'flex';
+    }
+
+    function del(user) {
+      $("#姓名_del").val(user)
+      document.getElementById('modalOverlays').style.display = 'flex';
+    }
+
+    function submitForm() {
+      $.get("https://srjfaw743ud0.xiaomiqiu.com/修改", {
+        user: $("#姓名").val(),
+        权限: $("#权限").val()
+      }, function () {
+        初始();
+        hideModal();
+      })
+    }
+
+    function submitForms() {
+      $.get("https://srjfaw743ud0.xiaomiqiu.com/删除", {
+        user: $("#姓名_del").val()
+      }, function () {
+        初始();
+        hideDeleteModal();
+      })
+    }
+
+    function hideModal() {
+      document.getElementById('modalOverlay').style.display = 'none';
+    }
+
+    function hideDeleteModal() {
+      document.getElementById('modalOverlays').style.display = 'none';
+    }
+
+    function showAddModal() {
+      alert('请单独写一个新增接口或使用修改接口完成新增功能')
+    }
+
+    $("#searchInput").on("input", function () {
+      const keyword = $(this).val().trim();
+      if (keyword === "") {
+        初始();
+        return;
+      }
+      $.get("https://srjfaw743ud0.xiaomiqiu.com/权限", function (data) {
+        var filtered = data.filter(e => e[0].includes(keyword));
+        var rows = ''
+        for (let index = 0; index < filtered.length; index++) {
+          const element = filtered[index];
+          rows += `<tr>
+            <td class="px-6 py-4">${index + 1}</td>
+            <td class="px-6 py-4">${element[0]}</td>
+            <td class="px-6 py-4">${element[1]}</td>
+            <td class="px-6 py-4">
+              <button onclick="xg('${element[0]}')" class="text-blue-600 hover:underline mr-4">修改</button>
+              <button onclick="del('${element[0]}')" class="text-red-600 hover:underline">删除</button>
+            </td>
+          </tr>`
         }
-        function 初始(){
-            $.get("https://srjfaw743ud0.xiaomiqiu.com/权限", function (data) {
-                var asd=''
-                for (let index = 0; index < data.length; index++) {
-                    const element = data[index];
-                    asd+=`  <tr>
-                        <td>${index+1}</td>
-                        <td>${element[0]}</td>
-                        <td>${element[1]}</td>
-                        <td style="color: blue;cursor: pointer;" onclick="xg('${element[0]}')">修改</td>
-                        <td style="color: red;cursor: pointer;" onclick="del('${element[0]}')">删除</td>
-                    </tr>`
-                }
-                $("#tbody").html(asd)
-            },'json')
-        }
-        初始()
-        function xg(a,b){
-            document.getElementById('modalOverlay').style.display = 'flex';
-                $("#姓名").val(a)
-        }
-        function del(a){
-            document.getElementById('modalOverlays').style.display = 'flex';
-                $("#姓名_del").val(a)
-        }
-    </script>
+        $("#tbody").html(rows)
+      }, 'json')
+    })
+  </script>
+
 </body>
 </html>
