--- a/Edule/index.html
+++ b/Edule/index.html
@@ -76,7 +76,7 @@
                         <div class="header-sign-in-up d-none d-lg-block">
                             <ul>
                                 <li><a class="sign-in" href="login.html">登出</a></li>
-                                <li><a a href="#" id="后台管理" style="display: none;">后台管理</a></li>
+                                <li><a a href="./jq22pd-76257e04-9282-11e4-8bfa-00163e001348/Bootstrap-150103222921/index.html" id="后台管理" style="display: none;">后台管理</a></li>
                                 <li><a class="sign-up" href="register.html">个人信息</a></li>
                             </ul>
                         </div>
